# rocket_templete

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/2023-06-26-072623_create_crates/: up.sql
src/: main.rs  models.rs  repositories.rs
src/routes/: rustaceans.rs
