[package]
name = "rocket_templete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
rocket = {version = "0.5.0-rc.3", features = ["json"]}
serde = { version = "1.0.164", features = ["derive"] }


[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_postgres_pool"]
